--- a/frontendAndroid/passengerAndroid/app/src/main/AndroidManifest.xml
+++ b/frontendAndroid/passengerAndroid/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ca.mcgill.ecse321.eventregistration">
+    package="ca.mcgill.ecse321.passengerandroid">
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name="ca.mcgill.ecse321.passengerandroid.LoginActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
