--- a/frontendAndroid/DriverApp/app/build.gradle
+++ b/frontendAndroid/DriverApp/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.loopj.android:android-async-http:1.4.9'
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
+    implementation 'com.google.android.gms:play-services-awareness:16.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
