design login frontend, hook it up to backend using async http client library

--- a/frontendAndroid/DriverApp/app/src/main/AndroidManifest.xml
+++ b/frontendAndroid/DriverApp/app/src/main/AndroidManifest.xml
@@ -31,8 +31,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".FrontPageActivity"
-            android:label="Front Page"
+            android:name=".LoginActivity"
+            android:label="Login"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
