--- a/frontendAndroid/passengerAndroid/app/src/main/AndroidManifest.xml
+++ b/frontendAndroid/passengerAndroid/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="ca.mcgill.ecse321.passengerandroid">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -27,19 +29,13 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="ca.mcgill.ecse321.passengerandroid.HomepageActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <meta-data
+            android:name="com.google.android.awareness.API_KEY"
+            android:value="AIzaSyA8Hx2C3k6EcA-1rDF5G-fAqNm9SjcCBPw" />
 
     </application>
 
