Removed unnecessary page.xml files, merged them with activity.xml files Renamed package name to passengerApp

--- a/frontendAndroid/passengerAndroid/app/src/main/AndroidManifest.xml
+++ b/frontendAndroid/passengerAndroid/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ca.mcgill.ecse321.passengerandroid">
+    package="ca.mcgill.ecse321.passengerapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="ca.mcgill.ecse321.passengerandroid.LoginActivity"
+            android:name="ca.mcgill.ecse321.passengerapp.LoginActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -23,7 +23,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="ca.mcgill.ecse321.passengerandroid.RegisterActivity"
+            android:name="ca.mcgill.ecse321.passengerapp.RegisterActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
