Added Edit Journey possibility and included pick up time

--- a/frontendAndroid/DriverApp/app/src/main/AndroidManifest.xml
+++ b/frontendAndroid/DriverApp/app/src/main/AndroidManifest.xml
@@ -25,6 +25,18 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".EditJourneyActivity"
+            android:label="Edit a journey"
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.SEND" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:mimeType="text/plain" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".MainActivity"
             android:label="Main Menu"
             android:theme="@style/AppTheme">
