Added join journey possiblity and more info in layout

--- a/frontendAndroid/ege/PassengerApp/app/src/main/AndroidManifest.xml
+++ b/frontendAndroid/ege/PassengerApp/app/src/main/AndroidManifest.xml
@@ -56,7 +56,7 @@
         </activity>
         <activity
             android:name=".SearchActivity"
-            android:label="Driver Profile"
+            android:label="Journeys"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
